Fix(README.md) error + footer centered Fix(site folder) Removed spaces of folders

--- a/SiteWeb-L.Corentin-240314/index.html
+++ b/SiteWeb-L.Corentin-240314/index.html
@@ -125,7 +125,7 @@
 
 
                     <div class="card left">
-                        <img src="assets\action-fields\mountain.svg" alt="SVG of mountain of rock">
+                        <img src="assets/action-fields/mountain.svg" alt="SVG of mountain of rock">
                         <div class="text">
                             <h4>Majestic Mountains</h4>
                             <p>Embark on a journey to the Majestic Mountains, where rugged cliffs and pristine wilderness await
