Update(Footer) + Fix(nav) + Update(SmallerSVG) + lang(en>fr)

--- a/SiteWeb-L.Corentin-240314/index.html
+++ b/SiteWeb-L.Corentin-240314/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 	<head>
 		<meta charset="utf-8">
-		<meta name="description" content="Association that protects humans of animals">
+		<meta name="description" content=" Association qui protège les humains des animaux">
 		<meta name="author" content="Corentin Lallement">
-		<meta name="keywords" content="animals, protection, wild, reaction">
+		<meta name="keywords" content=" animaux, protection, sauvage, réaction, humains, association">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="robots" content="index, follow">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -15,7 +15,8 @@
 
 		<link rel="stylesheet" href="styles.css">
 
-		<link rel="preload" fetchpriority="high" as="image" href="assets/decoration/header-bg.svg" type="image/svg">
+		<link rel="preload" fetchpriority="high" as="image" href="assets/logo.webp" type="image/webp">
+		<link rel="preload" fetchpriority="high" as="image" href="assets/decoration/header-bg.webp" type="image/webp">
 		<link rel="preload" fetchpriority="high" as="image" href="assets/decoration/header-bg-phone.webp" type="image/webp" media="(max-width: 500px)">
 
 		<title>WildReaction | Home</title>
@@ -23,17 +24,18 @@
 		<header>
 			<nav>
 				<a href="."><img class="logo" src="assets/logo.webp" alt="logo WildReaction" width="60" height="60" ></a>
-				<h2><a href="#WildReaction">WildReaction</a></h2>
+				<h2><a href=".">WildReaction</a></h2>
 				
 				<ul id="nav-menu">
-					<li><a class="active" href="#Home">Home</a></li>
-					<li><a href="#Animals">Animals</a></li>
-					<li><a href="#About">About</a></li>
+					<li><a class="active" href=".">Accueil</a></li>
+					<li><a href="animals/">Animaux</a></li>
+					<li><a href="about/">A-Propos</a></li>
 				</ul>
 			</nav>
 			<div id="title-div">
-				<h1>Home Page</h1>
-				<p>Welcome to the website of the first association that protects humans of animals</p>
+				<h1>Accueil</h1>
+				<p>Bienvenue sur le site de la première association qui protège les humains des animaux</p>
+
 			</div>
 		</header>
 
@@ -42,88 +44,93 @@
 				<h2>Action Fields</h2>
 				<div class="cards">
 					<div class="card left">
-						<img src="assets/action-fields/building.webp" alt="webp of buildings in a city">
+						<img src="assets/action-fields/building.webp" alt="webp des immeubles dans une ville">
 						<div class="text">
-							<h3>Urban Sanctuary</h3>
-							<p>Seek refuge amidst towering buildings, shielded from wildlife.
+							<h3>Secteur Urbain</h3>
+							<p> Cherchez refuge au milieu des immeubles, à l'abri de la faune sauvage.
 								<br>
-								<br>Our association works tirelessly to ensure that urban areas remain safe havens for humans, despite encroaching urbanization and the potential risks posed by wildlife.
+								<br>Notre association travaille sans relâche pour garantir que les zones urbaines restent des havres de paix pour les humains, malgré l'urbanisation croissante et les risques potentiels posés par la faune sauvage.
 								<br>
-								<br>By implementing strategic measures and raising awareness, we create environments where people can live, work, and thrive without fear of animal disturbances.</p>
+								<br>En mettant en œuvre des mesures stratégiques et en sensibilisant le public, nous créons des environnements où les gens peuvent vivre, travailler et prospérer sans craindre les perturbations animales.
+							</p>
 						</div>
 					</div>
 
 					<div class="card right">
-						<img src="assets/action-fields/desert.webp" alt="webp of a sand desert">
+						<img src="assets/action-fields/desert.webp" alt="webp d'un désert de sable">
 						<div class="text">
-							<h3>Desert Haven</h3>
-							<p>Find safety in the vast openness of the desert, away from animal threats
+							<h3>Havre du Désert</h3>
+							<p>Trouvez refuge dans la vaste ouverture du désert, à l'abri des menaces animales
 								<br>
-								<br>Our association understands the challenges of surviving in arid landscapes, where encounters with wildlife can be unpredictable
+								<br>Notre association comprend les défis de la survie dans des paysages arides, où les rencontres avec la faune peuvent être imprévisibles
 								<br>
-								<br>Through education and conservation efforts, we ensure that humans can explore the desert's beauty without endangering themselves or the natural habitat of desert-dwelling animals.</p>
+								<br>Grâce à des efforts d'éducation et de conservation, nous veillons à ce que les humains puissent explorer la beauté du désert sans se mettre en danger ni mettre en danger l'habitat naturel des animaux vivant dans le désert.
+							</p>
 						</div>
 					</div>
 
 					<div class="card left">
-						<img src="assets/action-fields/grass.webp" alt="webp of grass">
+						<img src="assets/action-fields/grass.webp" alt="webp de l'herbe">
 						<div class="text">
-							<h3>Lush Meadows</h3>
-							<p>Experience the serenity of Lush Meadows, where verdant grasslands stretch as far as the eye can see
+							<h3> Prairie Verdoyante</h3>
+							<p> Découvrez la sérénité de Lush Meadows, où les prairies verdoyantes s'étendent à perte de vue
 								<br>
-								<br>Our association works diligently to maintain the delicate balance of this vibrant ecosystem, ensuring that it thrives for generations to come
+								<br>Notre association travaille avec diligence pour maintenir l'équilibre délicat de cet écosystème vibrant, veillant à ce qu'il prospère pour les générations à venir
 								<br>
-								<br>Through responsible land management practices and conservation initiatives, we protect the biodiversity of these grassy plains while providing safe recreational opportunities for visitors
+								<br>Grâce à des pratiques de gestion responsable des terres et des initiatives de conservation, nous protégeons la biodiversité de ces plaines herbeuses tout en offrant des opportunités récréatives sûres aux visiteurs
 								<br>
-								<br>Whether you're picnicking in the shade of a towering oak or frolicking through fields of wildflowers, rest assured that you're in a protected environment where nature flourishes.</p>
+								<br>Que vous pique-niquiez à l'ombre d'un chêne imposant ou que vous gambadiez à travers des champs de fleurs
+							</p>
 						</div>
 					</div>
 
 					<div class="card right">
-						<img src="assets/action-fields/mountain-snow.webp" alt="webp of a mountain with snow">
+						<img src="assets/action-fields/mountain-snow.webp" alt="webp d'une montagne enneigée">
 						<div class="text">
-							<h3>Alpine Peaks</h3>
-							<p>Embark on an adventure to the Alpine Peaks, where snow-capped mountains tower majestically against the sky
+							<h3>Pics Alpins</h3>
+							<p>Lancez-vous dans une aventure aux Pics Alpins, où les montagnes enneigées s'élèvent majestueusement contre le ciel
 								<br>
-								<br>Our association works tirelessly to ensure the safety of adventurers exploring these rugged landscapes, providing essential resources and emergency services for those in need
+								<br>Notre association travaille sans relâche pour assurer la sécurité des aventuriers explorant ces paysages accidentés, en fournissant des ressources essentielles et des services d'urgence aux personnes dans le besoin
 								<br>
-								<br>Through sustainable tourism practices and conservation efforts, we protect the fragile ecosystems of the alpine region, preserving its natural beauty for future generations to enjoy
+								<br>Grâce à des pratiques de tourisme durable et des efforts de conservation, nous protégeons les écosystèmes fragiles de la région alpine, préservant sa beauté naturelle pour que les générations futures puissent en profiter
 								<br>
-								<br>Whether you're scaling rocky cliffs or admiring panoramic views from the summit, rest assured that you're in safe hands as you experience the wonders of the mountains.</p>
+								<br>Que vous escaladiez des falaises rocheuses ou admiriez des vues panoramiques depuis
+							</p>
 						</div>
 					</div>
 
 					<div class="card left">
-						<img src="assets/action-fields/mountain.webp" alt="webp of mountain of rock">
+						<img src="assets/action-fields/mountain.webp" alt="webp d'une montagne">
 						<div class="text">
-							<h3>Majestic Mountains</h3>
-							<p>Embark on a journey to the Majestic Mountains, where rugged cliffs and pristine wilderness await
+							<h3>Montagnes Majestueuses</h3>
+							<p> Lancez-vous dans un voyage vers les Montagnes Majestueuses, où des falaises escarpées et une nature sauvage immaculée vous attendent
 								<br>
-								<br>Our association is dedicated to ensuring the safety of hikers and adventurers exploring these breathtaking landscapes
+								<br>Notre association est dédiée à garantir la sécurité des randonneurs et des aventuriers explorant ces paysages à couper le souffle
 								<br>
-								<br>Through trail maintenance and safety education programs, we empower visitors to enjoy the mountains responsibly while minimizing their impact on the environment
+								<br>Grâce à l'entretien des sentiers et à des programmes d'éducation sur la sécurité, nous permettons aux visiteurs de profiter des montagnes de manière responsable tout en minimisant leur impact sur l'environnement
 								<br>
-								<br>From exhilarating summit climbs to peaceful alpine meadows, the mountains offer endless opportunities for adventure and discovery, all under the watchful care of our dedicated team.</p>
+								<br>Des ascensions de sommets exaltantes aux paisibles prairies alpines, les montagnes offrent d'innombrables opportunités d'aventure et de découverte, le tout sous la surveillance attentive de notre équipe dévouée.
+							</p>
 						</div>
 					</div>
 
 					<div class="card right">
-						<img src="assets/action-fields/water.webp" alt="webp of waves">
+						<img src="assets/action-fields/water.webp" alt="webp de vagues">
 						<div class="text">
-							<h3>Marine Paradise</h3>
-							<p>Plunge into the depths of the Marine Paradise, where azure waters teem with life and wonder
+							<h3>Paradis Marin</h3>
+							<p> Plongez dans les profondeurs du Paradis Marin, où les eaux azur grouillent de vie et d'émerveillement
 								<br>
-								<br>Our association is dedicated to protecting the fragile ecosystems of the ocean, ensuring that marine habitats remain healthy and vibrant
+								<br>Notre association est dédiée à la protection des écosystèmes fragiles de l'océan, veillant à ce que les habitats marins restent sains et vibrants
 								<br>
-								<br>Through marine conservation initiatives and sustainable fishing practices, we preserve the biodiversity of these underwater realms while providing opportunities for responsible recreation
+								<br>Grâce à des initiatives de conservation marine et à des pratiques de pêche durables, nous préservons la biodiversité de ces royaumes sous-marins tout en offrant des opportunités de loisirs responsables
 								<br>
-								<br>Whether you're diving among coral reefs or watching whales breach offshore, rest assured that you're exploring in a protected environment where marine life flourishes under our care.</p>
+								<br>Que vous plongiez parmi les récifs coralliens ou que vous regardiez les baleines sauter.
+							</p>
 						</div>
 					</div>
 
 				</div>
 			</section>
-
 		</main>
 
 		<footer>
@@ -136,15 +143,15 @@
 				<div class="grid">
 					<fieldset id="footer-donation">
 						<legend>Donation</legend>
-						<p>Your donation will help us protect humans from animals and preserve the natural beauty of our world. 
-							<br>Every contribution makes a difference, no matter how small.</p>
-						<button>Donate Now</button>
+						<p>Votre don nous aidera à protéger les humains des animaux et à préserver la beauté naturelle de notre monde.
+							<br>Chaque contribution fait une différence, peu importe sa taille.</p>
+						<button>Je Donne</button>
 					</fieldset>
 					<fieldset id="footer-nav">
 						<legend>Navigation</legend>
 						<nav>
 							<ul>
-								<li><a href="#">About Us</a></li>
+								<li><a href="#">A-Propos</a></li>
 								<li><a href="#">Ressources</a></li>
 							</ul>
 						</nav>
@@ -152,12 +159,17 @@
 				</div>
 				<div id="footer-end">
 					<sub>
-						<i>© 2021 WildReaction. 
-							<br>All Rights Reserved.
+						<i>2024 WildREaction.
+							<br>Tous droits réservés.
 						</i>
 					</sub>
 				</div>
 			</div>
+			<a id="back-to-top" href="#title-div">
+				<img src="assets/decoration/back-to-top.svg" alt="back to top" width="40" height="40">
+
+			</a>
+
 		</footer>
 	</body>
 </html>
