--- a/SiteWeb-L.Corentin-240314/about/index.html
+++ b/SiteWeb-L.Corentin-240314/about/index.html
@@ -1,3 +1,102 @@
-hey
-<a href="../">Retour</a>
-<a href="../animals/">Animaux</a>
+<!DOCTYPE html>
+<html lang="fr">
+	<head>
+		<meta charset="utf-8">
+		<meta name="description" content=" Association qui protège les humains des animaux">
+		<meta name="author" content="Corentin Lallement">
+		<meta name="keywords" content=" animaux, protection, sauvage, réaction, humains, association">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="robots" content="index, follow">
+		<meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+		<link rel="icon" type="image/x-icon" href="../assets/logo.ico">
+
+		<meta name="theme-color" content="#f1c40f">
+
+		<link rel="stylesheet" href="../styles.css">
+
+		<link rel="preload" fetchpriority="high" as="image" href="../assets/logo.webp" type="image/webp">
+		<link rel="preload" fetchpriority="high" as="image" href="../assets/decoration/header-bg.webp" type="image/webp">
+		<link rel="preload" fetchpriority="high" as="image" href="../assets/decoration/header-bg-phone.webp" type="image/webp" media="max-width: 500px">
+
+		<link rel="preload" as="font" href="../assets/fonts/Bahnschrift.ttf" type="font/ttf" crossorigin="anonymous">
+		<link rel="preload" as="font" href="../assets/fonts/Shojumaru.ttf" type="font/ttf" crossorigin="anonymous">
+
+		<title>WildReaction | Home</title>
+	<body>
+		<header>
+			<nav>
+				<a href="../"><img class="logo" src="../assets/logo.webp" alt="logo WildReaction" width="60" height="60" ></a>
+				<h2><a href="../">WildReaction</a></h2>
+				
+				<ul id="nav-menu">
+					<li><a href="../">Accueil</a></li>
+					<li><a href="../animals/">Animaux</a></li>
+					<li><a class="active" href=".">A-Propos</a></li>
+				</ul>
+			</nav>
+			<div id="title-div">
+				<h1>A-propos</h1>
+                <p> Découvrez qui nous sommes et comment nous contacter.</p>
+			</div>
+		</header>
+
+		<main>
+            <section id="Informations">
+                <h2>Informations</h2>
+                <div>
+                    <p>Nom: Lallement</p>
+                    <p>Prénom: Corentin</p>
+                    <p>Adresse e-mail: <a href="mailto:corentin.lallement@std.heh.be">corentin.lallement@std.heh.be</a></p>
+                </div>
+            </section>
+			<section id="Maquettes">
+				<h2>Maquettes</h2>
+				<div>
+					<img src="../assets/maquette.jpg" alt="Maquette papier" width="500" height="500">
+					<img src="../assets/maquette.jpg" alt="Maquette papier" width="500" height="500">
+					<img src="../assets/maquette.jpg" alt="Maquette papier" width="500" height="500">
+				</div>
+			</section>
+		</main>
+
+		<footer>
+			</</article>article><img id="before-footer" alt="before footer" src="../assets/decoration/before-footer.svg" width="720" height="80">
+			
+			<div id="footer-content">
+				<div id="footer-start">
+					<img class="logo" src="../assets/logo.webp" alt="logo WildReaction" width="100" height="100">
+				</div>
+				<div class="grid">
+					<fieldset id="footer-donation">
+						<legend>Donation</legend>
+						<p>
+							Votre don nous aidera à protéger les humains des animaux et à préserver la beauté naturelle de notre monde.
+							<br>Chaque contribution fait une différence, peu importe sa taille.
+						</p>
+						<button>Je Donne</button>
+					</fieldset>
+					<fieldset id="footer-nav">
+						<legend>Navigation</legend>
+						<nav>
+							<ul>
+								<li><a href="../about/">A-Propos</a></li>
+								<li><a href="#">Ressources</a></li>
+							</ul>
+						</nav>
+					</fieldset>
+				</div>
+				<div id="footer-end">
+					<sub>
+						<i> 2024 WildREaction.
+							<br> Tous droits réservés.
+						</i>
+					</sub>
+				</div>
+			</div>
+			<a id="back-to-top" href="#">
+				<img src="../assets/decoration/back-to-top.svg" alt="back to top" width="40" height="40">
+			</a>
+		</footer>
+	</body>
+</html>
