Fix(W3C) + chore(SVG):Zipped

--- a/SiteWeb-L.Corentin-240314/animals/index.html
+++ b/SiteWeb-L.Corentin-240314/animals/index.html
@@ -23,6 +23,7 @@
 		<link rel="preload" as="font" href="../assets/fonts/Shojumaru.ttf" type="font/ttf" crossorigin="anonymous">
 
 		<title>WildReaction | Home</title>
+	</head>
 	<body>
 		<header>
 			<nav>
@@ -384,7 +385,8 @@
 							<br>Il est important de respecter leur espace et de ne pas les provoquer.
 						</p>
 						<p>
-							Pairi Daiza vous aidera à vous défendre contre un panda. <a href="https://www.pairidaiza.eu/fr">Pairi Daiza</a>
+							Pairi Daiza vous aidera à vous défendre contre un panda. 
+							<br><a href="https://www.pairidaiza.eu/fr">Pairi Daiza</a>
 						</p>
 					</article>
 					<article class="animal" id="animal-pelican">
