--- a/SiteWeb-L.Corentin-240314/index.html
+++ b/SiteWeb-L.Corentin-240314/index.html
@@ -17,12 +17,13 @@
 
 		<link rel="preload" fetchpriority="high" as="image" href="assets/logo.webp" type="image/webp">
 		<link rel="preload" fetchpriority="high" as="image" href="assets/decoration/header-bg.webp" type="image/webp">
-		<link rel="preload" fetchpriority="high" as="image" href="assets/decoration/header-bg-phone.webp" type="image/webp" media="max-width: 500px">
+		<link rel="preload" fetchpriority="high" as="image" href="assets/decoration/header-bg-phone.webp" type="image/webp" media="(max-width: 500px)">
 
 		<link rel="preload" as="font" href="assets/fonts/Bahnschrift.ttf" type="font/ttf" crossorigin="anonymous">
 		<link rel="preload" as="font" href="assets/fonts/Shojumaru.ttf" type="font/ttf" crossorigin="anonymous">
 
 		<title>WildReact | Home</title>
+	</head>
 	<body>
 		<header>
 			<nav>
