--- a/SiteWeb-L.Corentin-240314/about/index.html
+++ b/SiteWeb-L.Corentin-240314/about/index.html
@@ -23,6 +23,7 @@
 		<link rel="preload" as="font" href="../assets/fonts/Shojumaru.ttf" type="font/ttf" crossorigin="anonymous">
 
 		<title>WildReaction | Home</title>
+	</head>
 	<body>
 		<header>
 			<nav>
