Add(webp): images de Maquettes Update(index.html): pour les images

--- a/SiteWeb-L.Corentin-240314/about/index.html
+++ b/SiteWeb-L.Corentin-240314/about/index.html
@@ -54,9 +54,8 @@
 			<section id="Maquettes">
 				<h2>Maquettes</h2>
 				<div>
-					<img src="../assets/maquette.jpg" alt="Maquette papier" width="500" height="500">
-					<img src="../assets/maquette.jpg" alt="Maquette papier" width="500" height="500">
-					<img src="../assets/maquette.jpg" alt="Maquette papier" width="500" height="500">
+					<img src="../assets/maquettes/maquette-phone.webp" alt="Maquette papier" width="897" height="1280">
+					<img src="../assets/maquettes/maquette.webp" alt="Maquette papier" width="897" height="1280">
 				</div>
 			</section>
 		</main>
