Fix(index.html): links

--- a/SiteWeb-L.Corentin-240314/about/index.html
+++ b/SiteWeb-L.Corentin-240314/about/index.html
@@ -33,7 +33,7 @@
 				<ul id="nav-menu">
 					<li><a href="../">Accueil</a></li>
 					<li><a href="../animals/">Animaux</a></li>
-					<li><a class="active" href=".">A-Propos</a></li>
+					<li><a class="active" href="/">A-Propos</a></li>
 				</ul>
 			</nav>
 			<div id="title-div">
