--- a/SiteWeb-L.Corentin-240314/animals/index.html
+++ b/SiteWeb-L.Corentin-240314/animals/index.html
@@ -22,7 +22,7 @@
 		<link rel="preload" as="font" href="../assets/fonts/Bahnschrift.ttf" type="font/ttf" crossorigin="anonymous">
 		<link rel="preload" as="font" href="../assets/fonts/Shojumaru.ttf" type="font/ttf" crossorigin="anonymous">
 
-		<title>WildReaction | Home</title>
+		<title>WildReact | Animaux</title>
 	</head>
 	<body>
 		<header>
@@ -32,7 +32,7 @@
 				
 				<ul id="nav-menu">
 					<li><a href="../">Accueil</a></li>
-					<li><a class="active" href=".">Animaux</a></li>
+					<li><a class="active" href="/">Animaux</a></li>
 					<li><a href="../about/">A-Propos</a></li>
 				</ul>
 			</nav>
