--- a/SiteWeb-L.Corentin-240314/index.html
+++ b/SiteWeb-L.Corentin-240314/index.html
@@ -27,13 +27,13 @@
 	<body>
 		<header>
 			<nav>
-				<a href="."><img class="logo" src="assets/logo.webp" alt="logo WildReact" width="60" height="60" ></a>
+				<a href="/"><img class="logo" src="assets/logo.webp" alt="logo WildReact" width="60" height="60" ></a>
 				<h2>
-					<a href=".">WildReact</a>
+					<a href="/">WildReact</a>
 				</h2>
 				
 				<ul id="nav-menu">
-					<li><a class="active" href=".">Accueil</a></li>
+					<li><a class="active" href="/">Accueil</a></li>
 					<li><a href="animals/">Animaux</a></li>
 					<li><a href="about/">A-Propos</a></li>
 				</ul>
