Add(about/index.html): FAQ

--- a/SiteWeb-L.Corentin-240314/about/index.html
+++ b/SiteWeb-L.Corentin-240314/about/index.html
@@ -23,7 +23,9 @@
 		<link rel="preload" as="font" href="../assets/fonts/Shojumaru.ttf" type="font/ttf" crossorigin="anonymous">
 
 		<title>WildReaction | Home</title>
-	</head>
+	<!-- Code injected by Five-server -->
+  <script async data-id="five-server" data-file="c:\Users\saggt\Bureau\WebSite project DevWEB HEHB1Q2\SiteWeb-L.Corentin-240314\about\index.html" type="application/javascript" src="/fiveserver.js"></script>
+  </head>
 	<body>
 		<header>
 			<nav>
@@ -56,6 +58,25 @@
 				<div>
 					<img src="../assets/maquettes/maquette-phone.webp" alt="Maquette papier" width="897" height="1280">
 					<img src="../assets/maquettes/maquette.webp" alt="Maquette papier" width="897" height="1280">
+				</div>
+			</section>
+			<section id="FAQ">
+				<h2>FAQ</h2>
+				<div>
+					<details>
+						<summary>Quel est le but de WildReaction ?</summary>
+						<p>Notre association a pour but de protéger les humains des animaux et de préserver la beauté naturelle de notre monde.</p>
+					</details>
+					<details>
+						<summary>Comment sont utilisés vos dons ?</summary>
+						<p>Vos dons sont utilisés pour financer nos actions de protection des humains et de préservation de la nature. Nous utilisons également vos dons pour sensibiliser le public à la cause des animaux dangereux.</p>
+					</details>
+
+					<details>
+						<summary>Comment puis-je devenir bénévole ?</summary>
+						<p>Pour devenir bénévole chez WildReaction, veuillez nous contacter par e-mail à l'adresse <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">contact@wildreaction.rr</a>. Nous serons ravis de discuter des opportunités de bénévolat avec vous.</p>
+					</details>
+				
 				</div>
 			</section>
 		</main>
