--- a/SiteWeb-L.Corentin-240314/animals/index.html
+++ b/SiteWeb-L.Corentin-240314/animals/index.html
@@ -38,7 +38,7 @@
 			</nav>
 			<div id="title-div">
 				<h1>Animaux</h1>
-				<p> Découcrvez les animaux sauvages et domestiques qui mettent en danger les humains</p>
+				<p> Découvrez les animaux sauvages et domestiques qui mettent en danger les humains</p>
 			</div>
 		</header>
 
