--- a/SiteWeb-L.Corentin-240314/index.html
+++ b/SiteWeb-L.Corentin-240314/index.html
@@ -22,20 +22,20 @@
 		<link rel="preload" as="font" href="assets/fonts/Bahnschrift.ttf" type="font/ttf" crossorigin="anonymous">
 		<link rel="preload" as="font" href="assets/fonts/Shojumaru.ttf" type="font/ttf" crossorigin="anonymous">
 
-		<title>WildReact | Home</title>
+		<title>WildReact | Accueil</title>
 	</head>
 	<body>
 		<header>
 			<nav>
-				<a href="/"><img class="logo" src="assets/logo.webp" alt="logo WildReact" width="60" height="60" ></a>
+				<a href="index.html"><img class="logo" src="assets/logo.webp" alt="logo WildReact" width="60" height="60" ></a>
 				<h2>
-					<a href="/">WildReact</a>
+					<a href="index.html">WildReact</a>
 				</h2>
 				
 				<ul id="nav-menu">
-					<li><a class="active" href="/">Accueil</a></li>
-					<li><a href="animals/">Animaux</a></li>
-					<li><a href="about/">A-Propos</a></li>
+					<li><a class="active" href="index.html">Accueil</a></li>
+					<li><a href="animals.html">Animaux</a></li>
+					<li><a href="about.html">À propos</a></li>
 				</ul>
 			</nav>
 			<div id="title-div">
@@ -167,8 +167,8 @@
 						<legend>Navigation</legend>
 						<nav>
 							<ul>
-								<li><a href="#">A-Propos</a></li>
-								<li><a href="#">Ressources</a></li>
+								<li><a href="about.html">A-Propos</a></li>
+								<li><a href="ressources.html">Ressources</a></li>
 							</ul>
 						</nav>
 					</fieldset>
