Fix(ressources.html): Textes

--- a/SiteWeb-L.Corentin-240314/ressources.html
+++ b/SiteWeb-L.Corentin-240314/ressources.html
@@ -22,7 +22,7 @@
 		<link rel="preload" as="font" href="assets/fonts/Bahnschrift.ttf" type="font/ttf" crossorigin="anonymous">
 		<link rel="preload" as="font" href="assets/fonts/Shojumaru.ttf" type="font/ttf" crossorigin="anonymous">
 
-		<title>WildReact | Accueil</title>
+		<title>WildReact | Ressources</title>
 	</head>
 	<body>
 		<header>
@@ -39,15 +39,15 @@
 				</ul>
 			</nav>
 			<div id="title-div">
-				<h1>Accueil</h1>
-				<p>Unis pour la sécurité humaine.</p>
+				<h1>Ressources</h1>
+				<p>Retrouvez les ressources de ce site</p>
 
 			</div>
 		</header>
 
 		<main>
 			<section id="Ressources">
-				<h2>Ressources</h2>
+				<h2>Liens vers les sites</h2>
 				<div>
 					<ul>
 						<li><a target="_blank" rel="noopener noreferrer nofollow" href="https://www.svgrepo.com/collection/animal-outlined-sepia-icons/">Icônes des animaux</a></li>
