--- a/SiteWeb-L.Corentin-240314/ressources.html
+++ b/SiteWeb-L.Corentin-240314/ressources.html
@@ -33,7 +33,7 @@
 				</h2>
 				
 				<ul id="nav-menu">
-					<li><a class="active" href="index.html">Accueil</a></li>
+					<li><a href="index.html">Accueil</a></li>
 					<li><a href="animals.html">Animaux</a></li>
 					<li><a href="about.html">À propos</a></li>
 				</ul>
