--- a/SiteWeb-L.Corentin-240314/about.html
+++ b/SiteWeb-L.Corentin-240314/about.html
@@ -56,8 +56,8 @@
 				<section id="Maquettes">
 					<h2>Maquettes</h2>
 					<div>
-						<img src="assets/maquettes/maquette-phone.webp" alt="Maquette papier" width="897" height="1280">
-						<img src="assets/maquettes/maquette.webp" alt="Maquette papier" width="897" height="1280">
+						<a href="assets/maquettes/maquette-phone.webp"><img src="assets/maquettes/maquette-phone.webp" alt="Maquette papier" width="897" height="1280"></a>
+						<a href="assets/maquettes/maquette.webp"><img src="assets/maquettes/maquette.webp" alt="Maquette papier" width="897" height="1280"></a>
 					</div>
 				</section>
 				<section id="FAQ">
