Moving: Webstorm IDE Fix: some SVG size issues Fix(about.html): "maquettes" responsive sizes

--- a/SiteWeb-L.Corentin-240314/index.html
+++ b/SiteWeb-L.Corentin-240314/index.html
@@ -15,9 +15,9 @@
 
 		<link rel="stylesheet" href="styles.css">
 
-		<link rel="preload" fetchpriority="high" as="image" href="assets/logo.webp" type="image/webp">
-		<link rel="preload" fetchpriority="high" as="image" href="assets/decoration/header-bg.webp" type="image/webp">
-		<link rel="preload" fetchpriority="high" as="image" href="assets/decoration/header-bg-phone.webp" type="image/webp" media="(max-width: 500px)">
+		<link rel="preload" as="image" href="assets/logo.webp" type="image/webp">
+		<link rel="preload" as="image" href="assets/decoration/header-bg.webp" type="image/webp">
+		<link rel="preload" as="image" href="assets/decoration/header-bg-phone.webp" type="image/webp" media="(max-width: 500px)">
 
 		<link rel="preload" as="font" href="assets/fonts/Bahnschrift.ttf" type="font/ttf" crossorigin="anonymous">
 		<link rel="preload" as="font" href="assets/fonts/Shojumaru.ttf" type="font/ttf" crossorigin="anonymous">
@@ -27,7 +27,7 @@
 	<body>
 		<header>
 			<nav>
-				<a href="index.html"><img class="logo" src="assets/logo.webp" alt="logo WildReact" width="60" height="60" ></a>
+				<a href="index.html"><img class="logo" src="assets/logo.webp" alt="logo WildReact" width="512" height="512" ></a>
 				<h2>
 					<a href="index.html">WildReact</a>
 				</h2>
@@ -65,7 +65,7 @@
 							<h3>Secteur Urbain</h3>
 							<p>Cherchez refuge au milieu des immeubles, à l'abri de la faune sauvage.
 								<br>
-								<br>Notre association travaille sans relâche pour garantir que les zones urbaines restent des havres de paix pour les humains, malgré l'urbanisation croissante et les risques potentiels posés par la faune sauvage.
+								<br>Notre association travaille sans relâche pour garantir que les zones urbaines restent des havres de paix pour les humains, malgré l'urbanisation croissante et les risques posés par la faune sauvage.
 								<br>
 								<br>En mettant en œuvre des mesures stratégiques et en sensibilisant le public, nous créons des environnements où les gens peuvent vivre, travailler et prospérer sans craindre les perturbations animales.
 							</p>
@@ -154,7 +154,7 @@
 			
 			<div id="footer-content">
 				<div id="footer-start">
-					<a href="."><img class="logo" src="assets/logo.webp" alt="logo WildReact" width="100" height="100" ></a>
+					<a href="."><img class="logo" src="assets/logo.webp" alt="logo WildReact" width="512" height="512" ></a>
 				</div>
 				<div class="grid">
 					<fieldset id="footer-donation">
