--- a/SiteWeb-L.Corentin-240314/ressources.html
+++ b/SiteWeb-L.Corentin-240314/ressources.html
@@ -15,9 +15,9 @@
 
 		<link rel="stylesheet" href="styles.css">
 
-		<link rel="preload" fetchpriority="high" as="image" href="assets/logo.webp" type="image/webp">
-		<link rel="preload" fetchpriority="high" as="image" href="assets/decoration/header-bg.webp" type="image/webp">
-		<link rel="preload" fetchpriority="high" as="image" href="assets/decoration/header-bg-phone.webp" type="image/webp" media="(max-width: 500px)">
+		<link rel="preload" as="image" href="assets/logo.webp" type="image/webp">
+		<link rel="preload" as="image" href="assets/decoration/header-bg.webp" type="image/webp">
+		<link rel="preload" as="image" href="assets/decoration/header-bg-phone.webp" type="image/webp" media="(max-width: 500px)">
 
 		<link rel="preload" as="font" href="assets/fonts/Bahnschrift.ttf" type="font/ttf" crossorigin="anonymous">
 		<link rel="preload" as="font" href="assets/fonts/Shojumaru.ttf" type="font/ttf" crossorigin="anonymous">
@@ -27,7 +27,7 @@
 	<body>
 		<header>
 			<nav>
-				<a href="index.html"><img class="logo" src="assets/logo.webp" alt="logo WildReact" width="60" height="60" ></a>
+				<a href="index.html"><img class="logo" src="assets/logo.webp" alt="logo WildReact" width="512" height="512" ></a>
 				<h2>
 					<a href="index.html">WildReact</a>
 				</h2>
@@ -79,7 +79,7 @@
 			
 			<div id="footer-content">
 				<div id="footer-start">
-					<a href="."><img class="logo" src="assets/logo.webp" alt="logo WildReact" width="100" height="100" ></a>
+					<a href="."><img class="logo" src="assets/logo.webp" alt="logo WildReact" width="512" height="512" ></a>
 				</div>
 				<div class="grid">
 					<fieldset id="footer-donation">
