--- a/SiteWeb-L.Corentin-240314/about.html
+++ b/SiteWeb-L.Corentin-240314/about.html
@@ -15,9 +15,9 @@
 
 			<link rel="stylesheet" href="styles.css">
 
-			<link rel="preload" fetchpriority="high" as="image" href="assets/logo.webp" type="image/webp">
-			<link rel="preload" fetchpriority="high" as="image" href="assets/decoration/header-bg.webp" type="image/webp">
-			<link rel="preload" fetchpriority="high" as="image" href="assets/decoration/header-bg-phone.webp" type="image/webp" media="(max-width: 500px)">
+			<link rel="preload" as="image" href="assets/logo.webp" type="image/webp">
+			<link rel="preload" as="image" href="assets/decoration/header-bg.webp" type="image/webp">
+			<link rel="preload" as="image" href="assets/decoration/header-bg-phone.webp" type="image/webp" media="(max-width: 500px)">
 
 			<link rel="preload" as="font" href="assets/fonts/Bahnschrift.ttf" type="font/ttf" crossorigin="anonymous">
 			<link rel="preload" as="font" href="assets/fonts/Shojumaru.ttf" type="font/ttf" crossorigin="anonymous">
@@ -27,7 +27,7 @@
 		<body>
 			<header>
 				<nav>
-					<a href="index.html"><img class="logo" src="assets/logo.webp" alt="logo WildReact" width="60" height="60" ></a>
+					<a href="index.html"><img class="logo" src="assets/logo.webp" alt="logo WildReact" width="512" height="512" ></a>
 					<h2>
 						<a href="index.html">WildReact</a>
 					</h2>
@@ -48,8 +48,8 @@
 				<section id="Informations">
 					<h2>Informations</h2>
 					<div>
-						<p>Nom: Lallement</p>
-						<p>Prénom: Corentin</p>
+						<p>Nom : Lallement</p>
+						<p>Prénom : Corentin</p>
 						<p>Adresse e-mail: <a href="mailto:corentin.lallement@std.heh.be">corentin.lallement@std.heh.be</a></p>
 					</div>
 				</section>
@@ -86,7 +86,7 @@
 				
 				<div id="footer-content">
 					<div id="footer-start">
-						<img class="logo" src="assets/logo.webp" alt="logo WildReaction" width="100" height="100">
+						<img class="logo" src="assets/logo.webp" alt="logo WildReaction" width="512" height="512">
 					</div>
 					<div class="grid">
 						<fieldset id="footer-donation">
