--- a/SiteWeb-L.Corentin-240314/about.html
+++ b/SiteWeb-L.Corentin-240314/about.html
@@ -22,7 +22,10 @@
 		>
 		<meta property="og:type" content="website">
 		<meta property="og:url" content="https://wildreact.com/about.html">
-		<meta property="og:image" content="assets/logo.webp">
+		<meta
+				property="og:image"
+				content="https://corentinl5.github.io/WebSite-project-DevWEB-HEHB1Q2/SiteWeb-L.Corentin-240314/assets/logo.webp"
+		>
 		<meta property="og:locale" content="fr_FR">
 
 		<meta name="twitter:card" content="summary">
