Feat: donation.html page

--- a/SiteWeb-L.Corentin-240314/ressources.html
+++ b/SiteWeb-L.Corentin-240314/ressources.html
@@ -12,7 +12,7 @@
 		<meta name="keywords" content=" animaux, protection, sauvage, réaction, humains, association">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="robots" content="index, follow">
-		<meta name="canonical" content="https://wildreact.com/">
+		<meta name="canonical" content="https://wildreact.com/resources.html">
 
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
 
@@ -110,7 +110,7 @@
 						<legend>Donation</legend>
 						<p>Votre don nous aidera à protéger les humains des animaux et à préserver la beauté naturelle de notre monde.
 							<br>Chaque contribution fait une différence, peu importe sa taille.</p>
-						<button>Je Donne</button>
+						<a href="donation.html" class="button">Je Donne</a>
 					</fieldset>
 					<fieldset id="footer-nav">
 						<legend>Navigation</legend>
