--- a/SiteWeb-L.Corentin-240314/index.html
+++ b/SiteWeb-L.Corentin-240314/index.html
@@ -183,7 +183,7 @@
 						<legend>Donation</legend>
 						<p>Votre don nous aidera à protéger les humains des animaux et à préserver la beauté naturelle de notre monde.
 							<br>Chaque contribution fait une différence, peu importe sa taille.</p>
-						<button>Je Donne</button>
+						<a href="donation.html" class="button">Je Donne</a>
 					</fieldset>
 					<fieldset id="footer-nav">
 						<legend>Navigation</legend>
