Chore: target andnoreferrer to button in donation.html

--- a/SiteWeb-L.Corentin-240314/donation.html
+++ b/SiteWeb-L.Corentin-240314/donation.html
@@ -75,7 +75,7 @@
 						<br>Chaque contribution fait une différence, peu importe sa taille.</p>
 				</div>
 
-				<a href="https://revolut.me/corenty9pi" class="donner">Je Donne</a>
+				<a href="https://revolut.me/corenty9pi" target="_blank" rel="noreferrer" class="donner">Je Donne</a>
 			</section>
 
 			<section id="Payment">
