Update about.html (À propos)

--- a/SiteWeb-L.Corentin-240314/about.html
+++ b/SiteWeb-L.Corentin-240314/about.html
@@ -62,7 +62,7 @@
 				</ul>
 			</nav>
 			<div id="title-div">
-				<h1>A-propos</h1>
+				<h1>À propos</h1>
 				<p> Découvrez qui nous sommes et comment nous contacter.</p>
 			</div>
 		</header>
