Chore: refactor all files - styles/style.css - assets/logo/* - about-> information.html

--- a/SiteWeb-L.Corentin-240314/donation.html
+++ b/SiteWeb-L.Corentin-240314/donation.html
@@ -32,13 +32,13 @@
 		<meta name="twitter:card" content="summary">
 		<meta name="twitter:creator" content="@tarumo2246">
 
-		<link rel="icon" type="image/x-icon" href="assets/logo.ico">
+		<link rel="icon" type="image/x-icon" href="assets/logos/logo.ico">
 
 		<meta name="theme-color" content="#f1c40f">
 
-		<link rel="stylesheet" href="styles.css">
+		<link rel="stylesheet" href="styles/style.css">
 
-		<link rel="preload" as="image" href="assets/logo.webp" type="image/webp">
+		<link rel="preload" as="image" href="assets/logos/logo.webp" type="image/webp">
 		<link rel="preload" as="image" href="assets/decoration/header-bg.webp" type="image/webp">
 		<link rel="preload" as="image" href="assets/decoration/header-bg-phone.webp" type="image/webp" media="(max-width: 500px)">
 
@@ -50,7 +50,7 @@
 	<body>
 		<header>
 			<nav>
-				<a href="index.html"><img class="logo" src="assets/logo.webp" alt="logo WildReact" width="512" height="512" ></a>
+				<a href="index.html"><img class="logo" src="assets/logos/logo.webp" alt="logo WildReact" width="512" height="512" ></a>
 				<h2>
 					<a href="index.html">WildReact</a>
 				</h2>
@@ -58,7 +58,7 @@
 				<ul id="nav-menu">
 					<li><a href="index.html">Accueil</a></li>
 					<li><a href="animals.html">Animaux</a></li>
-					<li><a href="about.html">À propos</a></li>
+					<li><a href="information.html">Info</a></li>
 				</ul>
 			</nav>
 			<div id="title-div">
@@ -93,7 +93,7 @@
 			
 			<div id="footer-content">
 				<div id="footer-start">
-					<a href="."><img class="logo" src="assets/logo.webp" alt="logo WildReact" width="512" height="512" ></a>
+					<a href="."><img class="logo" src="assets/logos/logo.webp" alt="logo WildReact" width="512" height="512" ></a>
 				</div>
 				<div class="grid">
 					<fieldset id="footer-donation">
@@ -106,7 +106,7 @@
 						<legend>Navigation</legend>
 						<nav>
 							<ul>
-								<li><a href="about.html">A-Propos</a></li>
+								<li><a href="information.html">A-Propos</a></li>
 								<li><a href="ressources.html">Ressources</a></li>
 							</ul>
 						</nav>
