--- a/SiteWeb-L.Corentin-240314/information.html
+++ b/SiteWeb-L.Corentin-240314/information.html
@@ -32,25 +32,25 @@
 		<meta name="twitter:card" content="summary">
 		<meta name="twitter:creator" content="@tarumo2246">
 
-		<link rel="icon" type="image/x-icon" href="assets/logo.ico">
+		<link rel="icon" type="image/x-icon" href="assets/logos/logo.ico">
 
 		<meta name="theme-color" content="#f1c40f">
 
-		<link rel="stylesheet" href="styles.css">
+		<link rel="stylesheet" href="styles/style.css">
 
-		<link rel="preload" as="image" href="assets/logo.webp" type="image/webp">
+		<link rel="preload" as="image" href="assets/logos/logo.webp" type="image/webp">
 		<link rel="preload" as="image" href="assets/decoration/header-bg.webp" type="image/webp">
 		<link rel="preload" as="image" href="assets/decoration/header-bg-phone.webp" type="image/webp" media="(max-width: 500px)">
 
 		<link rel="preload" as="font" href="assets/fonts/Bahnschrift.ttf" type="font/ttf" crossorigin="anonymous">
 		<link rel="preload" as="font" href="assets/fonts/Shojumaru.ttf" type="font/ttf" crossorigin="anonymous">
 
-		<title>WildReact | À propos</title>
+		<title>WildReact | Info</title>
 	</head>
 	<body>
 		<header>
 			<nav>
-				<a href="index.html"><img class="logo" src="assets/logo.webp" alt="logo WildReact" width="512" height="512" ></a>
+				<a href="index.html"><img class="logo" src="assets/logos/logo.webp" alt="logo WildReact" width="512" height="512" ></a>
 				<h2>
 					<a href="index.html">WildReact</a>
 				</h2>
@@ -58,11 +58,11 @@
 				<ul id="nav-menu">
 					<li><a href="index.html">Accueil</a></li>
 					<li><a href="animals.html">Animaux</a></li>
-					<li><a class="active" href="about.html">À propos</a></li>
+					<li><a class="active" href="information.html">Info</a></li>
 				</ul>
 			</nav>
 			<div id="title-div">
-				<h1>À propos</h1>
+				<h1>Info</h1>
 				<p> Découvrez qui nous sommes et comment nous contacter.</p>
 			</div>
 		</header>
@@ -71,9 +71,9 @@
 			<section id="Informations">
 				<h2>Informations</h2>
 				<div>
-					<p>Nom : Lallement</p>
-					<p>Prénom : Corentin</p>
+					<p><img src="assets/student-card.webp" alt="Corentin Lallement" width="470" height="300"></p>
 					<p>Adresse e-mail: <a href="mailto:corentin.lallement@std.heh.be">corentin.lallement@std.heh.be</a></p>
+
 				</div>
 			</section>
 			<section id="Maquettes">
@@ -109,7 +109,7 @@
 
 			<div id="footer-content">
 				<div id="footer-start">
-					<img class="logo" src="assets/logo.webp" alt="logo WildReaction" width="512" height="512">
+					<img class="logo" src="assets/logos/logo.webp" alt="logo WildReaction" width="512" height="512">
 				</div>
 				<div class="grid">
 					<fieldset id="footer-donation">
@@ -124,7 +124,7 @@
 						<legend>Navigation</legend>
 						<nav>
 							<ul>
-								<li><a href="about.html">A-Propos</a></li>
+								<li><a href="information.html">A-Propos</a></li>
 								<li><a href="ressources.html">Ressources</a></li>
 							</ul>
 						</nav>
